Fix missing picture border in high contrast

--- a/src/nationalarchives/components/picture/picture.scss
+++ b/src/nationalarchives/components/picture/picture.scss
@@ -78,10 +78,11 @@
 
   @include colour.on-high-contrast-and-forced-colours {
     @include colour.colour-border("keyline-dark", 1px);
-    border-bottom-width: 0;
 
     &__caption {
-      padding: 1rem;
+      margin: 0;
+
+      border: none;
     }
   }
 }
